# FFmpegStudy

./: .gitignore  CMakeLists.txt  README.md
include/SDL2/: SDL_config.h  SDL_main.h
include/libavcodec/: avcodec.h  vaapi.h
include/libavfilter/: avfilter.h
libs/: libavdevice.58.5.100.dylib  libavfilter.7.40.101.dylib  libavformat.58.20.100.dylib  libavresample.4.0.0.dylib  libavutil.56.22.100.dylib  libswresample.3.3.100.dylib  libswscale.5.3.100.dylib
src/: audio_use.h  avformat_use.h  filter_use.h  main.cpp  sdl_use.h  sdl_video.h
